--- a/datDog/datDog.css
+++ b/datDog/datDog.css
@@ -1,25 +1,24 @@
-<style>
-    h1 {
-        text-align: center;
-    }
+<style>h1 {
+    text-align: center;
+}
 
-    table,
-    th,
-    td {
-        width: 1490px;
-        border: 1px solid rgb(0, 0, 0)
-    }
-    
-    body {
-        background-color: rgb(123, 226, 255);
-    }
+table,
+th,
+td {
+    width: 1490px;
+    border: 1px solid rgb(0, 0, 0)
+}
 
-    div {
-        background-color: rgb(253, 253, 253);
-        width: 1490px;
-        padding:1px;
-        border: 1px solid rgb(0, 0, 0);
-        margin: 0;
+body {
+    background-color: rgb(123, 226, 255);
+}
+
+div {
+    background-color: rgb(253, 253, 253);
+    width: 1490px;
+    padding: 1px;
+    border: 1px solid rgb(0, 0, 0);
+    margin: 0;
 
     a:link {
         color: green;
@@ -40,6 +39,7 @@
         color: rgb(79, 41, 249);
         text-decoration: none;
     }
+
     .information {
         font-family: cursive;
         color: rgb(79, 41, 249);
@@ -49,4 +49,5 @@
         font-family: 'Segoe UI';
         color: rgb(79, 41, 249)
     }
-</style>
+
+    </style>
