--- a/datDog/datDog.css
+++ b/datDog/datDog.css
@@ -1,4 +1,6 @@
-<style>h1 {
+<style>
+
+h1 {
     text-align: center;
 }
 
@@ -50,4 +52,4 @@ div {
         color: rgb(79, 41, 249)
     }
 
-    </style>
+</style>
