--- a/datDog/datDog.css
+++ b/datDog/datDog.css
@@ -1,14 +1,14 @@
-<style>
-
-h1 {
-    text-align: center;
+#datTitle {
+    font-family: 'Segoe UI';
+    color: rgb(49, 18, 189);
 }
+h1 {text-align: center;}
 
 table,
 th,
 td {
     width: 1490px;
-    border: 1px solid rgb(0, 0, 0)
+    border: 1px solid rgb(0, 0, 0);
 }
 
 body {
@@ -22,23 +22,27 @@ div {
     border: 1px solid rgb(0, 0, 0);
     margin: 0;
 
+    /* unvisited link */
     a:link {
         color: green;
         text-decoration: none;
     }
 
+    /* visited link */
+    a:visited {
+        color: rgb(79, 41, 249);
+        text-decoration: none;
+    }
+
+    /* mouse over link */
     a:hover {
         color: darksalmon;
         text-decoration: none;
     }
 
+    /* selected link */
     a:active {
         color: rgb(252, 223, 0);
-        text-decoration: none;
-    }
-
-    a:visited {
-        color: rgb(79, 41, 249);
         text-decoration: none;
     }
 
@@ -47,9 +51,4 @@ div {
         color: rgb(79, 41, 249);
     }
 
-    #datTitle {
-        font-family: 'Segoe UI';
-        color: rgb(79, 41, 249)
-    }
-
-</style>
+    
