--- a/datDog/datDog.css
+++ b/datDog/datDog.css
@@ -61,7 +61,7 @@ div {
         text-decoration: none;
 }
 
-.information {
+.datDog {
         font-family: cursive;
         color: rgb(79, 41, 249);
 }
